[package]
name = "bash-on-atcoder"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
description = "Run Bash scripts on AtCoder."
repository = "https://github.com/qryxip/bash-on-atcoder"
keywords = ["atcoder", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
curl = "0.4.34"
env_logger = "0.8.1"
log = "0.4.11"
once_cell = "1.4.1"
rpassword = "5.0.0"
rprompt = "1.0.5"
scraper = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
shell-escape = "0.1.5"
structopt = "0.3.20"
url = "2.1.1"
